infrastructure/k8s/cloud/02-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: cloudscribe
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
            - name: postgres-init
              mountPath: /docker-entrypoint-initdb.d/init_keycloak_db.sh
              subPath: init_keycloak_db.sh
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
        - name: postgres-init
          configMap:
            name: postgres-init-script
            defaultMode: 0777

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: cloudscribe
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
  clusterIP: None
