infrastructure/k8s/cloud/03-keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: cloudscribe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0.1
          args: ["start-dev"]
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: cloudscribe
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: "MC_rg-cloudscribe_aks-cloudscribe_westeurope"
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: keycloak
  type: LoadBalancer
  loadBalancerIP: "132.220.15.39"
