infrastructure/k8s/cloud/05-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudscribe-api
  namespace: cloudscribe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudscribe-api
  template:
    metadata:
      labels:
        app: cloudscribe-api
    spec:
      containers:
        - name: api
          image: acrcloudscribe081125.azurecr.io/cloudscribe-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cloudscribe-api-service 
  namespace: cloudscribe
spec:
  ports:
    - port: 80       
      targetPort: 8080 
  selector:
    app: cloudscribe-api
  type: ClusterIP
