infrastructure/k8s/cloud/06-blazor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudscribe-blazor
  namespace: cloudscribe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudscribe-blazor
  template:
    metadata:
      labels:
        app: cloudscribe-blazor
    spec:
      containers:
        - name: blazor
          image: acrcloudscribe081125.azurecr.io/cloudscribe-blazor:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cloudscribe-blazor-service
  namespace: cloudscribe
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: "MC_rg-cloudscribe_aks-cloudscribe_westeurope"
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: cloudscribe-blazor
  type: LoadBalancer
  loadBalancerIP: "132.220.15.39"
